# Software-Test-Suite

./: .gitmodules  CMakeLists.txt  README.md
klessydra_bench_tests/: CMakeLists.txt  main.c
klessydra_bench_tests/CoreMark/: CMakeLists.txt  core_main.c
klessydra_bench_tests/cfd/: CMakeLists.txt
klessydra_bench_tests/cfd/cfd_mth_no_accl/: CMakeLists.txt  acm-laminar-pipe-flow_mth.c
klessydra_bench_tests/cfd/cfd_sth_no_accl/: CMakeLists.txt  acm-laminar-pipe-flow_sth.c
klessydra_bench_tests/fft/: CMakeLists.txt  fft.c  fft_debug.c
klessydra_bench_tests/fft_accl/: CMakeLists.txt  main.c
klessydra_vcu_tests/: CMakeLists.txt
klessydra_vcu_tests/Kmeans/: CMakeLists.txt
klessydra_vcu_tests/Matmul/: CMakeLists.txt  RI5CY_matmul.c  klessydra_matmul_3SPM_dedicated.c
klessydra_vcu_tests/convolution_tests/convolution_test_multi_spmu_subkernels_decoupled/: convolution_test_multi_spmu_subkernels_decoupled.c
klessydra_vcu_tests/convolution_tests/convolution_test_multi_spmu_subkernels_loosely_coupled/: convolution_test_multi_spmu_subkernels_loosely_coupled.c
klessydra_vcu_tests/convolution_tests/convolution_test_multi_spmu_zeropadded_decoupled/: convolution_test_multi_spmu_zeropadded_decoupled.c
klessydra_vcu_tests/convolution_tests/convolution_test_no_accl_subkernels_decoupled/: convolution_test_no_accl_subkernels_decoupled.c
klessydra_vcu_tests/convolution_tests/convolution_test_riscy_subkernels/: convolution_test_riscy_subkernels.c
klessydra_vcu_tests/fft_test/: CMakeLists.txt  fft_accl.c
klessydra_vcu_tests/instruction_tests/: CMakeLists.txt
(+44 files in other folders)
